# geo-golf

./: .env.example  .gitignore  CourseMap.sln  Makefile  README.md  docker-compose.yml
.github/workflos/: ci.yml
data/: demo.geojson
native/linesimplify/: CMakeLists.txt  linesimplify.cpp
sql/: schema.sql  seed.sql  spatial_index.sql
src/CourseMap.Api/: CourseMap.Api.http  Program.cs  appsettings.Development.json
src/CourseMap.Api/Properties/: launchSettings.json
src/CourseMap.Importer/: CourseMap.Importer.csproj  NativeSimplify.cs  Program.cs  ValidationReport.cs  Validator.cs  appsettings.Development.json
